--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,8 @@
   <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"> </script>
 
   <script type="text/javascript"> hljs.highlightAll(); </script>
+  <script src="https://cdn1.lncld.net/static/js/av-min-1.5.0.js"></script>
+  <script src="https://jerry-cdn.b0.upaiyun.com/hit-kounter/hit-kounter-lc-0.3.0.js"></script>
   <!-- add mathjax -->
   <!-- end highlight.js support -->
 </head>
