--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,9 +16,9 @@ layout: default
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ author }}</span></span>
       {%- endif -%}
 
-        • <span id="busuanzi_container_page_pv">
+        <!-- • <span id="busuanzi_container_page_pv">
         Read<span id="busuanzi_value_page_pv"></span>.
-        </span>
+        </span> -->
 
     </p>
   </header>
