--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,6 +35,15 @@
   <script type="text/javascript"> hljs.highlightAll(); </script>
   <script src="https://cdn1.lncld.net/static/js/av-min-1.5.0.js"></script>
   <script src="https://jerry-cdn.b0.upaiyun.com/hit-kounter/hit-kounter-lc-0.3.0.js"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-15PWP5SXG0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-15PWP5SXG0');
+  </script>
   <!-- add mathjax -->
   <!-- end highlight.js support -->
 </head>
