add google scholar

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
   {% include google-analytics.html %}
   <!-- End Google Analytics -->
   {%- endif %}
-  {% if site.googlescholar_username %}
+  <!-- {% if site.googlescholar_username %}
   <div class="googlescholar" title="Visit my Google Scholar">
     <a href="https://scholar.google.com/citations?user={{ site.googlescholar_username }}" target="_blank" style="text-decoration: none; color: inherit;">
       <svg viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" style="width: 24px; height: 24px;">
@@ -27,7 +27,7 @@
       </svg>
     </a>
   </div>
-{% endif %}
+{% endif %} -->
 
 
   <!-- Begin highlight.js support -->
